# imoIA

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.streamlit  README.md  STATUS.md  apresentacao-imoia.html  launch_pipeline.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: keep-alive.yml
.streamlit/: config.toml
docs/: AUDIT_HTML_VS_REALIDADE.md  FASE_1_2A_RELATORIO.md  FASE_2A_POS_CLEANUP_MANUAL.md  FASE_2B_HARDENING_RELATORIO.md  FASE_2B_RELATORIO.md  MONITORIZACAO.md  TODOS_FASE_2B.md  TODOS_FASE_3.md
docs/architecture/: frontend-nextjs.md
scripts/: backup_supabase.py  cron_pipeline.py  cron_scraper.py  init_supabase_storage.py  migrate_creatives_to_storage.py  migrate_opportunities_to_properties.py  migrate_to_postgres.py  run_pipeline.sh  seed_dev.py  seed_m4.py  setup_cron.sh  setup_owner.py  start_bridge.sh
scripts/migrations/: 001_migrate_org_data.py  001_organizations.sql  001_rollback.sql  (+8 more)
src/: config.py  main.py  worker.py
tests/: test_ai_scoring.py  test_api_ingestor.py  test_api_properties.py  test_classifier.py  test_dashboard.py  test_email_provider.py  test_invites.py  test_m2_market.py  test_m4_deal_pipeline.py  test_m5_due_diligence.py  test_m6_cashflow_sync.py  test_m6_renovation.py  test_m7_marketing.py  test_m7_phase2.py  test_m7_phase3.py  test_m7_plugins.py  test_m8_leads.py  test_m9_closing.py  test_market.py  test_models_v2.py  test_pillow_creatives.py  test_pipeline.py  test_roles.py  test_whatsapp.py
whatsapp-bridge/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  server.js  store.js
worker-creatives/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+177 files in other folders)
